// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly 1`] = `
<View
  style={
    [
      {
        "minWidth": 130,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 2,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "backgroundColor": "#F2F4F7",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "minHeight": 80,
        },
        null,
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 196,
            "minHeight": 38,
            "paddingVertical": 8,
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": "top",
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          [
            {
              "paddingTop": 0,
            },
            undefined,
          ],
        ]
      }
      testID="TextInput"
      value="value"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly focused/blur 1`] = `
<View
  style={
    [
      {
        "minWidth": 130,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 2,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "backgroundColor": "#F2F4F7",
          "borderColor": "rgba(21, 28, 44, 0.2)",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "minHeight": 80,
        },
        null,
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 196,
            "minHeight": 38,
            "paddingVertical": 8,
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": "top",
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          [
            {
              "paddingTop": 0,
            },
            undefined,
          ],
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly focused/blur 2`] = `
<View
  style={
    [
      {
        "minWidth": 130,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 2,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "backgroundColor": "#F2F4F7",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "minHeight": 80,
        },
        null,
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 196,
            "minHeight": 38,
            "paddingVertical": 8,
            "width": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": "top",
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          [
            {
              "paddingTop": 0,
            },
            undefined,
          ],
        ]
      }
      testID="TextInput"
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatInputField renders correctly with props 1`] = `
<View
  style={
    [
      {
        "minWidth": 130,
      },
      [
        {
          "flex": 1,
          "flexDirection": "column",
          "marginRight": 2,
          "minWidth": undefined,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": undefined,
          "backgroundColor": "#F2F4F7",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginVertical": 8,
        },
        {
          "minHeight": 80,
        },
        null,
        [
          {
            "alignItems": "center",
            "borderWidth": undefined,
            "marginVertical": 0,
            "maxHeight": 196,
            "minHeight": 38,
            "paddingVertical": 8,
            "width": "100%",
          },
          {
            "width": 200,
          },
        ],
      ]
    }
  >
    <TextInput
      accessibilityLabel="chatInputField"
      allowFontScaling={true}
      editable={true}
      multiline={true}
      numberOfLines={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      placeholderTextColor="#9BA1B0"
      selectionColor="#2B78EE"
      style={
        [
          {
            "borderRadius": 8,
            "flex": 1,
            "padding": 0,
            "paddingLeft": 18,
            "paddingRight": 16,
            "paddingVertical": 12,
            "textAlignVertical": "top",
          },
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 20,
            "minHeight": 20,
          },
          [
            {
              "paddingTop": 0,
            },
            {
              "paddingTop": 20,
            },
          ],
        ]
      }
      testID="TextInput"
      value="value"
    />
  </View>
</View>
`;
